--- a/src/layout/Main.css
+++ b/src/layout/Main.css
@@ -1,4 +1,5 @@
 .backgroundFull {
+    /* position: relative; */
     background: url("../assets/images/Rectangle1.png");
     background-position: center;
     background-size: cover;
@@ -9,9 +10,10 @@
 .backgroundFull::before {
     content: "";
     position: absolute;
-    top: 65px;
+    top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.5);
+    /* filter: blur(1px) */
 }
